--- a/assets/sass/plugin/_slick.scss
+++ b/assets/sass/plugin/_slick.scss
@@ -106,7 +106,6 @@ $opacity-not-active: .25;
 .slick-slide {
     float: left;
     height: 100%;
-    min-height: 1px;
     [dir="rtl"] & {
         float: right;
     }
